--- a/dev_releases/metrics-demo/index.yml
+++ b/dev_releases/metrics-demo/index.yml
@@ -10,4 +10,6 @@ builds:
     version: 0+dev.4
   5eef1b2a-8ad6-4c9a-bf53-69761344a28e:
     version: 0+dev.5
+  fc0febaf-1270-499c-b974-09a88b7ba59e:
+    version: 0+dev.6
 format-version: '2'
