wired up the emitter job

--- a/manifests/bosh-lite.yml
+++ b/manifests/bosh-lite.yml
@@ -18,6 +18,8 @@ jobs:
   templates:
   - name: redis
     release: metrics-demo
+  - name: emitter
+    release: metrics-demo
   - name: metron_agent
     release: cf
   properties:
