fixed while loop for emitter ctl

--- a/dev_releases/metrics-demo/index.yml
+++ b/dev_releases/metrics-demo/index.yml
@@ -18,4 +18,6 @@ builds:
     version: 0+dev.8
   ded173fe-01e2-4b7d-89c1-5a01171224cb:
     version: 0+dev.9
+  a11180a2-130f-4372-a6a6-74d240a08872:
+    version: 0+dev.10
 format-version: '2'
