added consumer job that builds

--- a/dev_releases/metrics-demo/index.yml
+++ b/dev_releases/metrics-demo/index.yml
@@ -24,4 +24,6 @@ builds:
     version: 0+dev.11
   b5660245-3f89-4907-bfa0-d8b55dc5ff35:
     version: 0+dev.12
+  1412b177-dcbf-4111-9141-1b07a7a9b2dd:
+    version: 0+dev.13
 format-version: '2'
