--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/emitter"]
 	path = src/emitter
 	url = git@github.com:/benlaplanche/emitter
+[submodule "src/metrics-consumer"]
+	path = src/metrics-consumer
+	url = git@github.com:/benlaplanche/metrics-consumer
