fixed consumer monit file

--- a/dev_releases/metrics-demo/index.yml
+++ b/dev_releases/metrics-demo/index.yml
@@ -34,4 +34,6 @@ builds:
     version: 0+dev.16
   f72e5a13-2fee-4ab0-95ce-4cc15d9d4b0c:
     version: 0+dev.17
+  dffe1d19-44c5-4587-bb78-4328afb51b52:
+    version: 0+dev.18
 format-version: '2'
