--- a/dev_releases/metrics-demo/index.yml
+++ b/dev_releases/metrics-demo/index.yml
@@ -38,4 +38,6 @@ builds:
     version: 0+dev.18
   60f7c1cf-220c-4f72-bdf2-0dbbdd6a4e91:
     version: 0+dev.19
+  70fa76e8-cd3f-4100-97d5-c3b137fbab43:
+    version: 0+dev.20
 format-version: '2'
